cmake_minimum_required(VERSION 3.19)
project(Chapter_2 C)

set(CMAKE_C_STANDARD 99)

add_executable(Chapter_2 P2433.c)
add_executable(P5709 P5709.c)
add_executable(P5710 P5710.c)
add_executable(P5711 P5711.c)
add_executable(P5712 P5712.c)
add_executable(P5713 P5713.c)
add_executable(P5714 P5714.c)
add_executable(P5715 P5715.c)