cmake_minimum_required(VERSION 3.19)
project(Chapter_2 C)

set(CMAKE_C_STANDARD 99)

add_executable(Chapter_2 P2433.c)
add_executable(P5709 P5709.c)
add_executable(P5710 P5710.c)
add_executable(P5711 P5711.c)
add_executable(P5712 P5712.c)
add_executable(P5713 P5713.c)
add_executable(P5714 P5714.c)
add_executable(P5715 P5715.c)
add_executable(P5716 P5716.c)
add_executable(P1085 P1085wa.c)
add_executable(P1909wa "P1909wa.c")
add_executable(P5717wa P5717wa.c)
add_executable(P1422 P1422.c)
add_executable(P1424 P1424wa.c)
add_executable(P1888 P1888.c)
add_executable(P1046 P1046.c)
add_executable(P4414 P4414.c)
add_executable(P1055 P1055.c)