cmake_minimum_required(VERSION 3.19)
project(Chapter_3 C)

set(CMAKE_C_STANDARD 99)

add_executable(Chapter_3 P5718.c)
add_executable(P5719 P5719.c)
add_executable(P5720 P5720.c)
add_executable(P5721 P5721.c)
add_executable(P1009 P1009wa.c)
add_executable(P1908 P1908.c)
add_executable(P1035 P1035.c)
add_executable(P5722 P5722.c)
add_executable(P5723 P5723.c)
add_executable(P1217 P1217.c)
add_executable(P1423 P1423.c)
add_executable(P1307 P1307.c)
add_executable(P1720 P1720.c)
add_executable(P5724 P5724.c)
add_executable(P1420 P1420.c)
add_executable(P1075 P1075wa.c)
add_executable(P5725 P5725.c)
add_executable(P5726 P5726.c)
add_executable(P4956 P4956.c)
add_executable(P1089 P1089wa.c)
add_executable(P1089wa P1089wa.c)